--- a/form-login.html
+++ b/form-login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>silahkan login terlebih dahulu</h2>
-        <form action="#" method="POST">
+        <form action="https://github.com/ODI-maker/web-login.git" method="POST">
             <label for="username">Nama pengguna:</label>
             <input type="text" id="username" name="username"
             placeholder="Masukkan nama pengguna" required>
@@ -22,7 +22,7 @@
     <input type="checkbox" name="remeber"> Ingat Saya
 </label>           
 <button type="submit">Login</button>
-<p><a href="#">Lupa Kata Sandi Anda?</a></p>
+<p><a href="https://github.com/ODI-maker/web-login.git">Lupa Kata Sandi Anda?</a></p>
 <p>Belum punya akun? <a href="#">Daftar Sekarang</a></p>
 </form>
 </div>
